--- a/3 четверть/Spring/Spring-shop/shop-admin-ui/src/main/resources/application.properties
+++ b/3 четверть/Spring/Spring-shop/shop-admin-ui/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_shop_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=13root13
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
